--- a/.github/workflows/publish-node.yml
+++ b/.github/workflows/publish-node.yml
@@ -9,16 +9,13 @@ env:
   CI: "1"
 
 on:
-  push:
-    branches:
-      - ci
-      - main
+  create:
     tags:
       - v*
 
 jobs:
   build:
-    if: ${{ startsWith(github.ref, 'refs/tags/v') || github.ref == 'refs/heads/ci' }}
+    if: ${{ startsWith(github.ref, 'refs/tags/v') }}
     strategy:
       fail-fast: false
       matrix:
@@ -603,8 +600,9 @@ jobs:
 
       - name: Publish
         run: |
-          echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" >> ~/.npmrc
+          echo "//npm.pkg.github.com/:_authToken=$NPM_TOKEN" >> ~/.npmrc
+          echo "@odenlang:registry=https://npm.pkg.github.com/" >> ~/.npmrc
           npm publish --access public
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NPM_TOKEN: ${{ secrets.GITHUB_TOKEN }}
