--- a/.github/workflows/publish-wasm.yml
+++ b/.github/workflows/publish-wasm.yml
@@ -33,7 +33,9 @@ jobs:
           key: ${{ runner.os }}-publish-integration
 
       - name: Install node dependencies
-        run: yarn
+        run: |
+          echo "@odenlang:registry=https://npm.pkg.github.com/" >> ~/.npmrc
+          yarn
 
       - name: Install wasm-pack
         run: curl https://rustwasm.github.io/wasm-pack/installer/init.sh -sSf | sh
@@ -42,15 +44,15 @@ jobs:
         working-directory: crates/binding_core_wasm
         run: |
           wasm-pack build --out-name wasm --release --scope=swc --target nodejs
-          sed -i -e 's/"name": "@swc\/binding_core_wasm"/"name": "@swc\/wasm"/g' pkg/package.json
+          sed -i -e 's/"name": "@swc\/binding_core_wasm"/"name": "@odenlang\/swc-wasm"/g' pkg/package.json
 
       - name: Publish
         run: |
-          echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" >> ~/.npmrc
+          echo "//npm.pkg.github.com/:_authToken=$NPM_TOKEN" >> ~/.npmrc
           (cd crates/binding_core_wasm/pkg && npm publish --access public)
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NPM_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   publish-web:
     if: ${{ startsWith(github.ref, 'refs/tags/v') }}
@@ -74,7 +76,9 @@ jobs:
           key: ${{ runner.os }}-publish-integration
 
       - name: Install node dependencies
-        run: yarn
+        run: |
+          echo "@odenlang:registry=https://npm.pkg.github.com/" >> ~/.npmrc
+          yarn
 
       - name: Install wasm-pack
         run: curl https://rustwasm.github.io/wasm-pack/installer/init.sh -sSf | sh
@@ -83,12 +87,12 @@ jobs:
         working-directory: crates/binding_core_wasm
         run: |
           wasm-pack build --out-name wasm-web --release --scope=swc --target web
-          sed -i -e 's/"name": "@swc\/binding_core_wasm"/"name": "@swc\/wasm-web"/g' pkg/package.json
+          sed -i -e 's/"name": "@swc\/binding_core_wasm"/"name": "@odenlang\/swc-wasm-web"/g' pkg/package.json
 
       - name: Publish
         run: |
-          echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" >> ~/.npmrc
+          echo "//npm.pkg.github.com/:_authToken=$NPM_TOKEN" >> ~/.npmrc
           (cd crates/binding_core_wasm/pkg && npm publish --access public)
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NPM_TOKEN: ${{ secrets.GITHUB_TOKEN }}
