--- a/scripts/npm/darwin-arm64/package.json
+++ b/scripts/npm/darwin-arm64/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "@swc/core-darwin-arm64",
-    "version": "1.2.130",
+    "name": "@odenlang/swc-core-darwin-arm64",
+    "version": "0.0.0",
     "os": [
         "darwin"
     ],
@@ -29,7 +29,7 @@
         "node": ">=10"
     },
     "publishConfig": {
-        "registry": "https://registry.npmjs.org/",
+        "registry": "https://npm.pkg.github.com/",
         "access": "public"
     },
     "repository": {
