--- a/scripts/npm/win32-ia32-msvc/package.json
+++ b/scripts/npm/win32-ia32-msvc/package.json
@@ -34,9 +34,9 @@
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/swc-project/swc.git"
+        "url": "git+https://github.com/odenlang/swc.git"
     },
     "bugs": {
-        "url": "https://github.com/swc-project/swc/issues"
+        "url": "https://github.com/odenlang/swc/issues"
     }
 }
