--- a/.github/workflows/publish-node.yml
+++ b/.github/workflows/publish-node.yml
@@ -170,7 +170,10 @@ jobs:
         shell: bash
         run: |
           echo "@odenlang:registry=https://npm.pkg.github.com/" >> ~/.npmrc
+          echo "//npm.pkg.github.com/:_authToken=${NPM_TOKEN}" >> ~/.npmrc
           yarn
+        env:
+          NPM_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Cache cargo registry
         uses: actions/cache@v2
         with:
@@ -229,7 +232,10 @@ jobs:
         shell: bash
         run: |
           echo "@odenlang:registry=https://npm.pkg.github.com/" >> ~/.npmrc
+          echo "//npm.pkg.github.com/:_authToken=${NPM_TOKEN}" >> ~/.npmrc
           yarn
+        env:
+          NPM_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Cleanup useless files to speedup
         run: |
