--- a/.github/workflows/publish-wasm.yml
+++ b/.github/workflows/publish-wasm.yml
@@ -35,7 +35,10 @@ jobs:
       - name: Install node dependencies
         run: |
           echo "@odenlang:registry=https://npm.pkg.github.com/" >> ~/.npmrc
+          echo "//npm.pkg.github.com/:_authToken=${NPM_TOKEN}" >> ~/.npmrc
           yarn
+        env:
+          NPM_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Install wasm-pack
         run: curl https://rustwasm.github.io/wasm-pack/installer/init.sh -sSf | sh
@@ -49,11 +52,7 @@ jobs:
 
       - name: Publish
         run: |
-          echo "//npm.pkg.github.com/:_authToken=$NPM_TOKEN" >> ~/.npmrc
           (cd crates/binding_core_wasm/pkg && npm publish --access public --registry https://npm.pkg.github.com/)
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NPM_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   publish-web:
     if: ${{ startsWith(github.ref, 'refs/tags/v') }}
@@ -79,7 +78,10 @@ jobs:
       - name: Install node dependencies
         run: |
           echo "@odenlang:registry=https://npm.pkg.github.com/" >> ~/.npmrc
+          echo "//npm.pkg.github.com/:_authToken=${NPM_TOKEN}" >> ~/.npmrc
           yarn
+        env:
+          NPM_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Install wasm-pack
         run: curl https://rustwasm.github.io/wasm-pack/installer/init.sh -sSf | sh
@@ -93,8 +95,4 @@ jobs:
 
       - name: Publish
         run: |
-          echo "//npm.pkg.github.com/:_authToken=$NPM_TOKEN" >> ~/.npmrc
           (cd crates/binding_core_wasm/pkg && npm publish --access public --registry https://npm.pkg.github.com/)
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NPM_TOKEN: ${{ secrets.GITHUB_TOKEN }}
