--- a/.github/workflows/windows-test.yml
+++ b/.github/workflows/windows-test.yml
@@ -15,6 +15,8 @@ jobs:
           registry-url: https://npm.pkg.github.com/
           scope: odenlang
           check-latest: true
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Install dependencies
         run: |
           yarn init -y
