--- a/.github/workflows/publish-node.yml
+++ b/.github/workflows/publish-node.yml
@@ -148,17 +148,25 @@ jobs:
         if: matrix.settings.target != 'i686-pc-windows-msvc'
         with:
           node-version: 16
+          registry-url: https://npm.pkg.github.com/
+          scope: odenlang
           check-latest: true
           cache: yarn
           architecture: x64
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Setup node x86
         uses: actions/setup-node@v2
         if: matrix.settings.target == 'i686-pc-windows-msvc'
         with:
           node-version: 16
+          registry-url: https://npm.pkg.github.com/
+          scope: odenlang
           check-latest: true
           cache: yarn
           architecture: x86
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Install
         uses: actions-rs/toolchain@v1
         if: ${{ !matrix.settings.docker }}
@@ -168,12 +176,7 @@ jobs:
           target: ${{ matrix.settings.target }}
       - name: Install node dependencies
         shell: bash
-        run: |
-          echo "@odenlang:registry=https://npm.pkg.github.com/" >> ~/.npmrc
-          echo "//npm.pkg.github.com/:_authToken=${NPM_TOKEN}" >> ~/.npmrc
-          yarn
-        env:
-          NPM_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: yarn
       - name: Cache cargo registry
         uses: actions/cache@v2
         with:
@@ -196,12 +199,7 @@ jobs:
         if: ${{ matrix.settings.setup }}
         shell: bash
       - name: Install dependencies
-        run: |
-          echo "@odenlang:registry=https://npm.pkg.github.com/" >> ~/.npmrc
-          echo "//npm.pkg.github.com/:_authToken=${NPM_TOKEN}" >> ~/.npmrc
-          yarn install --ignore-scripts --network-timeout 300000
-        env:
-          NPM_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: yarn install --ignore-scripts --network-timeout 300000
       - name: Build in docker
         uses: addnab/docker-run-action@v3
         if: ${{ matrix.settings.docker }}
@@ -231,16 +229,15 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: "16"
+          registry-url: https://npm.pkg.github.com/
+          scope: odenlang
           cache: "yarn"
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Install node dependencies
         shell: bash
-        run: |
-          echo "@odenlang:registry=https://npm.pkg.github.com/" >> ~/.npmrc
-          echo "//npm.pkg.github.com/:_authToken=${NPM_TOKEN}" >> ~/.npmrc
-          yarn
-        env:
-          NPM_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: yarn
 
       - name: Cleanup useless files to speedup
         run: |
@@ -342,17 +339,18 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node }}
+          registry-url: https://npm.pkg.github.com/
+          scope: odenlang
           check-latest: true
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Cache NPM dependencies
         uses: actions/cache@v2
         with:
           path: node_modules
           key: npm-cache-test-${{ matrix.settings.target }}-${{ matrix.node }}-${{ hashFiles('yarn.lock') }}
       - name: Install dependencies
-        run: |
-          echo "@odenlang:registry=https://npm.pkg.github.com/" >> ~/.npmrc
-          echo "//npm.pkg.github.com/:_authToken=${NPM_TOKEN}" >> ~/.npmrc
-          yarn install --ignore-scripts --network-timeout 300000
+        run: yarn install --ignore-scripts --network-timeout 300000
         env:
           NPM_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Download artifacts
@@ -386,19 +384,18 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node }}
+          registry-url: https://npm.pkg.github.com/
+          scope: odenlang
           check-latest: true
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Cache NPM dependencies
         uses: actions/cache@v2
         with:
           path: node_modules
           key: npm-cache-test-linux-x64-gnu-${{ matrix.node }}-${{ hashFiles('yarn.lock') }}
       - name: Install dependencies
-        run: |
-          echo "@odenlang:registry=https://npm.pkg.github.com/" >> ~/.npmrc
-          echo "//npm.pkg.github.com/:_authToken=${NPM_TOKEN}" >> ~/.npmrc
-          yarn install --ignore-scripts --network-timeout 300000
-        env:
-          NPM_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: yarn install --ignore-scripts --network-timeout 300000
       - name: Download artifacts
         uses: actions/download-artifact@v2
         with:
@@ -430,19 +427,18 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node }}
+          registry-url: https://npm.pkg.github.com/
+          scope: odenlang
           check-latest: true
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Cache NPM dependencies
         uses: actions/cache@v2
         with:
           path: node_modules
           key: npm-cache-test-x86_64-unknown-linux-musl-${{ matrix.node }}-${{ hashFiles('yarn.lock') }}
       - name: Install dependencies
-        run: |
-          echo "@odenlang:registry=https://npm.pkg.github.com/" >> ~/.npmrc
-          echo "//npm.pkg.github.com/:_authToken=${NPM_TOKEN}" >> ~/.npmrc
-          yarn install --ignore-scripts --network-timeout 300000
-        env:
-          NPM_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: yarn install --ignore-scripts --network-timeout 300000
       - name: Download artifacts
         uses: actions/download-artifact@v2
         with:
@@ -485,12 +481,7 @@ jobs:
           path: node_modules
           key: npm-cache-test-linux-aarch64-gnu-${{ matrix.node }}-${{ hashFiles('yarn.lock') }}
       - name: Install dependencies
-        run: |
-          echo "@odenlang:registry=https://npm.pkg.github.com/" >> ~/.npmrc
-          echo "//npm.pkg.github.com/:_authToken=${NPM_TOKEN}" >> ~/.npmrc
-          yarn install --ignore-scripts --ignore-platform --network-timeout 300000
-        env:
-          NPM_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: yarn install --ignore-scripts --ignore-platform --network-timeout 300000
       - name: Build TypeScript
         run: yarn build:ts
       - name: Setup and run tests
@@ -525,12 +516,7 @@ jobs:
           path: node_modules
           key: npm-cache-test-linux-aarch64-musl-${{ matrix.node }}-${{ hashFiles('yarn.lock') }}
       - name: Install dependencies
-        run: |
-          echo "@odenlang:registry=https://npm.pkg.github.com/" >> ~/.npmrc
-          echo "//npm.pkg.github.com/:_authToken=${NPM_TOKEN}" >> ~/.npmrc
-          yarn install --ignore-scripts --ignore-platform --network-timeout 300000
-        env:
-          NPM_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: yarn install --ignore-scripts --ignore-platform --network-timeout 300000
       - name: Build TypeScript
         run: yarn build:ts
       - name: Setup and run tests
@@ -572,12 +558,7 @@ jobs:
           path: node_modules
           key: npm-cache-test-linux-arm-gnueabihf-${{ matrix.node }}-${{ hashFiles('yarn.lock') }}
       - name: Install dependencies
-        run: |
-          echo "@odenlang:registry=https://npm.pkg.github.com/" >> ~/.npmrc
-          echo "//npm.pkg.github.com/:_authToken=${NPM_TOKEN}" >> ~/.npmrc
-          yarn install --ignore-scripts --ignore-platform --network-timeout 300000
-        env:
-          NPM_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: yarn install --ignore-scripts --ignore-platform --network-timeout 300000
       - name: Build TypeScript
         run: yarn build:ts
       - name: Setup and run tests
@@ -599,7 +580,7 @@ jobs:
       - test-linux-x64-musl-binding
       - test-linux-aarch64-gnu-binding
       - test-linux-arm-gnueabihf-binding
-      # - test-macOS-windows-binding
+      - test-macOS-windows-binding
       - test-linux-aarch64-musl-binding
       - build-freebsd
     steps:
@@ -609,6 +590,10 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: 14
+          registry-url: https://npm.pkg.github.com/
+          scope: odenlang
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Set release name
         run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
@@ -620,12 +605,7 @@ jobs:
           key: npm-cache-publish-${{ hashFiles('yarn.lock') }}
 
       - name: Install dependencies
-        run: |
-          echo "@odenlang:registry=https://npm.pkg.github.com/" >> ~/.npmrc
-          echo "//npm.pkg.github.com/:_authToken=${NPM_TOKEN}" >> ~/.npmrc
-          yarn install --ignore-scripts --network-timeout 300000
-        env:
-          NPM_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: yarn install --ignore-scripts --network-timeout 300000
 
       - name: Download all artifacts
         uses: actions/download-artifact@v2
@@ -647,9 +627,4 @@ jobs:
         shell: bash
 
       - name: Publish
-        run: |
-          echo "//npm.pkg.github.com/:_authToken=$NPM_TOKEN" >> ~/.npmrc
-          npm publish --access public
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NPM_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: npm publish --access public
