--- a/.github/workflows/publish-wasm.yml
+++ b/.github/workflows/publish-wasm.yml
@@ -55,7 +55,7 @@ jobs:
           (cd crates/binding_core_wasm/pkg && npm publish --access public --registry https://npm.pkg.github.com/)
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NPM_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
 
   publish-web:
     if: ${{ startsWith(github.ref, 'refs/tags/v') }}
@@ -101,4 +101,4 @@ jobs:
           (cd crates/binding_core_wasm/pkg && npm publish --access public --registry https://npm.pkg.github.com/)
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NPM_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
